--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1> spiccaco's Cydia Repository </h1>
-  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=spiccaco.github.io"> Click here to add spiccaco's Repo to Cydia!
+  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://spiccaco.github.io"> Click here to add spiccaco's Repo to Cydia!
 </body>
 </html>
